# desktop-app

./: .gitignore  AGENTS.md  Cargo.toml  DEMO.md  DESIGN.md  README.md  SIGNING.md  justfile
.github/workflows/: pages.yml
docs/: development.md  index.html
docs/evidence/ui-refresh/: README.md
docs/join/: index.html
scripts/: release-macos.sh  run-real-e2e.sh  update-console-ui.sh
src-tauri/: Cargo.toml  Untitled  entitlements.plist  tauri.conf.json  tauri.release.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  diagnose.rs  events.rs  lib.rs  main.rs  models.json  models.rs  node.rs  proxy.rs  server.rs  state.rs
src-tauri/tests/: process_defaults.rs  session_persistence.rs
ui/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
ui/e2e/mocked/: chat.spec.ts  flows.spec.ts  invite-link.spec.ts  mesh-panel.spec.ts
ui/e2e/real/: host-chat.spec.ts  join.spec.ts  support.ts  tool-scrape.spec.ts
ui/e2e/support/: mock-backend.ts
ui/src/: App.tsx  main.tsx  styles.css
ui/src/components/: AppNavigation.tsx  Chat.tsx  ChatHistorySidebar.tsx  ErrorScreen.tsx  InvitePanel.tsx  MeshMark.tsx  MeshPanel.tsx  MeshViz.tsx  SwitchMeshDialog.tsx  ui.tsx
ui/src/lib/: api.ts  chat-sessions.ts  session.ts  store.ts  theme.ts  types.ts
ui/src/screens/: JoinFlow.tsx  Main.tsx  MeshLive.tsx  PowerSetup.tsx  Progress.tsx  PublicJoin.tsx  PublicProgress.tsx  SettingsView.tsx  Visibility.tsx  Welcome.tsx
