[workspace]
resolver = "2"
members = ["src-tauri"]

# Mirrors mesh-llm's dev profile: GGUF startup hashes the source model with
# sha2 before the native model open, so keep those crates near release speed
# in dev builds or local model loads crawl.
# Cargo only honors [patch] from the root of the workspace being built, so
# mesh-llm's hf-hub fork patch must be mirrored here. Pointed at GIT (branch
# pushed 2026-07-02) so the repo builds anywhere — no sibling checkout.
# The branch = mesh-llm's fork base + one commit honoring HF_HUB_DISABLE_XET:
# xet's chunked CAS protocol stalls on some networks (~150KB/s vs ~14MB/s
# plain GET); the app forces the plain path by default in lib.rs. Multi-GB
# model/layer downloads NEED this (observed: gemma layer pulls stalling).
[patch.crates-io]
hf-hub = { git = "https://github.com/Mesh-LLM/hf-hub", branch = "mesh-console/disable-xet-env" }

[profile.dev.package.sha2]
opt-level = 3

[profile.dev.package.sha2-asm]
opt-level = 3
