[package]
name = "mesh-console"
version = "0.1.0"
edition = "2024"

[lib]
name = "mesh_console"
path = "src/lib.rs"

[[bin]]
name = "mesh-console"
path = "src/main.rs"

[[bin]]
name = "mesh-consoled"
path = "src/bin/mesh-consoled.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# mesh-llm crates come from the upstream repo, pinned by Cargo.lock; bump with
# `cargo update -p mesh-llm-sdk` (etc.) to track main.
mesh-llm-sdk = { git = "https://github.com/Mesh-LLM/mesh-llm", features = ["serving"] }
# default-features = false: the default `web-ui` feature embeds the operator
# console's React build (and requires its npm toolchain); we ship our own UI.
mesh-llm-host-runtime = { git = "https://github.com/Mesh-LLM/mesh-llm", default-features = false, features = ["dynamic-native-runtime"] }
mesh-llm-node = { git = "https://github.com/Mesh-LLM/mesh-llm" }
mesh-llm-events = { git = "https://github.com/Mesh-LLM/mesh-llm" }
mesh-llm-system = { git = "https://github.com/Mesh-LLM/mesh-llm" }
# package mesh-llm-client (dir crates/mesh-client), lib name mesh_client
mesh-llm-client = { git = "https://github.com/Mesh-LLM/mesh-llm" }

tauri = { version = "2", features = [] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
