[package]
name = "mesh-console"
version = "0.1.0"
edition = "2024"

[lib]
name = "mesh_console"
path = "src/lib.rs"

[[bin]]
name = "mesh-console"
path = "src/main.rs"

[[bin]]
name = "mesh-consoled"
path = "src/bin/mesh-consoled.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# mesh-llm crates come from the upstream repo, pinned by Cargo.lock; bump with
# `cargo update -p mesh-llm-sdk` (etc.) to track main.
mesh-llm-sdk = { git = "https://github.com/Mesh-LLM/mesh-llm", features = ["serving"] }
# default-features = false; only the native runtime is needed. The upstream
# "web-ui" feature (embedded operator console on port 3131) is intentionally
# left off — this app ships its own UI on :4640 and doesn't expose it.
mesh-llm-host-runtime = { git = "https://github.com/Mesh-LLM/mesh-llm", default-features = false, features = ["dynamic-native-runtime"] }
mesh-llm-node = { git = "https://github.com/Mesh-LLM/mesh-llm" }
mesh-llm-events = { git = "https://github.com/Mesh-LLM/mesh-llm" }
mesh-llm-system = { git = "https://github.com/Mesh-LLM/mesh-llm" }
# package mesh-llm-client (dir crates/mesh-client), lib name mesh_client
mesh-llm-client = { git = "https://github.com/Mesh-LLM/mesh-llm" }

# goose agent embedded in-process. Git dep pinned to a commit on
# aaif-goose/goose `main` (the canonical goose repo — not a private fork).
# rustls-tls keeps a single TLS backend across the tree.
# rev c82c431c = main HEAD as of 2026-07-03 (goose 1.41.0), bumped from
# 31bc265a (1.40.0). The provider/session/ModelConfig surface we use churns —
# bump this rev deliberately and re-run `cargo test`, don't float a branch.
goose = { git = "https://github.com/aaif-goose/goose", rev = "c82c431c", default-features = false, features = ["rustls-tls"] }
goose-providers = { git = "https://github.com/aaif-goose/goose", rev = "c82c431c", default-features = false, features = ["rustls-tls"] }
# Bundled MCP servers (computercontroller etc.). goose's builtin registry
# starts EMPTY for embedders — see register_builtin_extensions in agent.rs.
goose-mcp = { git = "https://github.com/aaif-goose/goose", rev = "c82c431c", default-features = false, features = ["rustls-tls"] }
# Same rmcp as goose's tree (goose declares ^1.4 → one unified version) for
# Role and the tool-call param types used in agent event translation + tests.
# Cargo.lock keeps rmcp AND rmcp-macros at 1.7.0. This is NOT arbitrary: goose
# 1.41.0 still does not compile against rmcp 1.8 (InitializeResult/peer_info()
# signature change — verified 2026-07-03), and rmcp-macros must match rmcp
# exactly. Re-test before bumping either; don't let `cargo update` float them.
rmcp = { version = "1.4", default-features = false }

tauri = { version = "2", features = [] }
# mesh:// URL scheme (invite links). Registered in Info.plist at bundle time
# via the "deep-link" plugin config in tauri.conf.json.
tauri-plugin-deep-link = "2"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
dirs = "6"
# For libc::_exit on quit — skip C++ static destructors so the embedded ggml
# Metal runtime can't abort in its global teardown (issue #8). Already in-tree
# transitively; declared explicitly since we call it directly.
libc = "0.2"
futures-util = "0.3"
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
